modal fixes and page segregation

--- a/source/templates/GenericLead.html
+++ b/source/templates/GenericLead.html
@@ -7,7 +7,9 @@
             <hr>
         </div>
         <div>
+            <div id="jsonEditorAnchor">
             <json-editor options="obj.options" json="obj.data" editor="editor"></json-editor>
+            </div>
         </div>
         <div class="config-body">
             <div class="config-submit-section">
