--- a/source/templates/Page.UIEntity.html
+++ b/source/templates/Page.UIEntity.html
@@ -73,25 +73,25 @@
                     <label class="entity-input-field">
                         Type
                     </label>
-                    <input type="text" name="entityType" class="entity-type" ng-model="data.entities[data.entityIndex].type" required>
+                    <input type="text" name="entityType" class="entity-type" ng-model="data.routes[data.entityIndex].type" required>
                 </div> -->
                 <div class="entity-options entity-name">
                     <label class="entity-input-field">
                         Name
                     </label>
-                    <input type="text" name="entityName" class="entity-name" ng-model="data.entities[data.entityIndex].name" required>
+                    <input type="text" name="entityName" class="entity-name" ng-model="data.routes[data.entityIndex].name" required>
                 </div>
                 <div class="entity-options entity-route-name">
                     <label class="entity-input-field">
                         Route Name
                     </label>
-                    <input type="text" name="entityRouteName" class="entity-route-name" ng-model="data.entities[data.entityIndex].routeName" required>
+                    <input type="text" name="entityRouteName" class="entity-route-name" ng-model="data.routes[data.entityIndex].routeName" required>
                 </div>
                 <div class="entity-options entity-route-path">
                     <label class="entity-input-field">
                         Route Path
                     </label>
-                    <input type="text" name="entityRoutePath" class="entity-route-path" ng-model="data.entities[data.entityIndex].routePath" required>
+                    <input type="text" name="entityRoutePath" class="entity-route-path" ng-model="data.routes[data.entityIndex].routePath" required>
                 </div>
             </div>
         </div>
@@ -100,6 +100,129 @@
 </div>
 <!-- <generic-queue data-entity="{title:'onemoretest'}"></generic-queue> -->
 <!-- <generic-lead></generic-lead> -->
-<div class="ui-entity-item" id="uiEntityContainer">
+<div>
+    <div class="ui-entity-item" id="uiEntityContainer">
 
+    </div>
+    
 </div>
+<!--
+<div class="ui-routes">
+    <div class="box box-theme">
+        <div class="box-header with-border">
+            <h3 class="box-title">Config</h3>
+        </div>
+        <div class="box-body ui-route-box">
+            <div ng-if="data.routes.length == 0">
+                <h5 class="empty-list-section">Add Config</h5>
+            </div>
+            <div ng-if="data.routes.length > 0" class="entity-list">
+                <div class="entity-item {{entity.class}}" ng-click="selectConfig($event,$index)" ng-repeat="config in entityConfig.config track by $index">
+                    <p>{{config.name}} | <mark class="gray">{{config.condition}}</mark></p>
+                    <div class="icon">
+                        <span title="Edit Entity" class="fa fa-pencil entity-edit" ng-click=editConfig($event,$index)></span>
+                        <span title="Close Entity" class="fa fa-close entity-close" ng-click=removeConfig($event,$index)></span>
+                    </div>
+                </div>
+            </div>
+            <div class="ui-route-add-section">
+                <div class="schema-form-section">
+                    <hr>
+                </div>
+                <div>
+                    <button ng-click="newConfig()" class="btn btn-theme"> <i class="fa fa-plus"></i> Add</button>
+                </div>
+            </div>
+             <div class="row" ng-if="routes.detail.routeDetails.length > 0 || routes.queue.routeDetails.length > 0">
+                <div class="col col-xs-4 col-sm-2" ng-repeat="queue in routes.queue.routeDetails track by $index">
+                    <div class="small-box bg-theme">
+                        <div class="entity-item">
+                            <div class="inner">
+                                <h3><i class="fa fa-pencil-square-o" ng-click="editEntity($event,$index)"></i></h3>
+                                <p>ScreeingQueue</p>
+                                <p>{{routes.queue.type}}: {{queue.name}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xs-4 col-sm-2" ng-repeat="detail in routes.detail.routeDetails  track by $index">
+                    <div class="small-box bg-theme">
+                        <div class="entity-item">
+                            <div class="inner">
+                                <h3><i class="fa fa-pencil-square-o" ng-click="editEntity($event,$index)"></i></h3>
+                                <p>ScreeingQueue- {{detail.path}}</p>
+                                <p>{{routes.detail.type}}: {{detail.name}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>        
+        </div>
+    </div>
+</div> -->
+
+<script type="text/ng-template" id="configContent.html">
+    <style>
+        input[type=text]{
+            border-left: none !important;
+            border-top: none !important;
+            border-right: none !important;
+            border: 1px solid #ccc;
+            width: 100%;
+            height: 34px;
+            padding: 6px 12px;
+            font-size: 14px;
+            line-height: 1.42857143;
+            transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+        }
+        input:focus{
+            outline: none;
+        }
+        .stage-body{
+            display: grid;
+            /*grid-row-gap: 1rem;*/
+        }
+        .stage-field{
+            display: grid;
+            grid-template-columns: 1.5fr 4fr;
+            grid-column-gap: 1.5rem;
+        }
+        .stage-input-field{
+            margin-bottom: 0px;
+            padding-top: 7px;
+            margin-bottom: 0;
+            text-align: right;
+        }
+        .submit-button{
+            margin-top: 1rem;
+            margin-left: 4rem;
+        }
+    </style>
+    <div class="modal-contents">
+        <div class="modal-header">
+            <h3>{{title}}</h3>
+        </div>
+        <div class="modal-body">
+            <div class="stage-body">
+                <div class="stage-field stage-name-field">
+                    <label class="stage-input-field">Config Name</label>
+                    <input type="text" name="stageName" class="stage-name" ng-model="dialogData.name" required>
+                </div>
+                <div class="stage-field code-field">
+                    <label class="stage-input-field">Condition</label>
+                    <input type="text" name="order" class="code" ng-model="dialogData.code" required>
+                </div>
+                <div class="submit-button">
+                    <button type="submit" class="btn btn-primary" ng-click="submitConfigDetails()">Submit</button>
+                </div>
+                <div ng-show="isDuplicateMessage">
+                    <p>{{isDuplicateMessage}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-default" ng-click="cancel()">Cancel</button>
+        </div>
+    </div>
+</script>
+
