--- a/source/templates/entityModal.html
+++ b/source/templates/entityModal.html
@@ -85,16 +85,8 @@
             <div class="select-entity-type">
                 <label class="select-page-type">Entity Type </label>
                 <div class="select-entity-name">
-                    <!-- <input type="radio" id="entityType1" name="queue" value="Queue" ng-model="entityData.type">
-                        <label for="entityType1">Queue</label>
-                        <input type="radio" id="entityType2" name="detail" value="Detail" ng-model="entityData.type">
-                        <label for="entityType2">Detail</label> -->
-                    <select ng-model="entityData.name" name="entity">
-                        <option value="">Choose Entity</option>
-                        <option value="Generic Queue">Generic Queue</option>
-                        <option value="Generic Lead">Generic Lead</option>
-                        <option value="Generic Enrollement">Generic Enrollement</option>
-                        <option value="Generic Loan Request">Generic Loan Request</option>
+                    <select ng-model="entityData.name" name="entity"
+                        ng-options="entity as entity for entity in entites">
                     </select>
                 </div>
             </div>
