--- a/source/templates/configModal.html
+++ b/source/templates/configModal.html
@@ -1,6 +1,5 @@
-<!-- Stage Addtion Modal -->
 <style>
-    input[type=text]{
+    input[type=text] {
         border-left: none !important;
         border-top: none !important;
         border-right: none !important;
@@ -10,27 +9,32 @@
         padding: 6px 12px;
         font-size: 14px;
         line-height: 1.42857143;
-        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+        transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     }
-    input:focus{
+
+    input:focus {
         outline: none;
     }
-    .stage-body{
+
+    .stage-body {
         display: grid;
         /*grid-row-gap: 1rem;*/
     }
-    .stage-field{
+
+    .stage-field {
         display: grid;
         grid-template-columns: 1.5fr 4fr;
         grid-column-gap: 1.5rem;
     }
-    .stage-input-field{
+
+    .stage-input-field {
         margin-bottom: 0px;
         padding-top: 7px;
         margin-bottom: 0;
         text-align: right;
     }
-    .submit-button{
+
+    .submit-button {
         margin-top: 1rem;
         margin-left: 4rem;
     }
@@ -42,26 +46,15 @@
     <div class="modal-body">
         <div class="stage-body">
             <div class="stage-field stage-name-field">
-                <label class="stage-input-field">Stage Name</label>
+                <label class="stage-input-field">Config Name</label>
                 <input type="text" name="stageName" class="stage-name" ng-model="dialogData.name" required>
             </div>
             <div class="stage-field code-field">
-                <label class="stage-input-field">Code</label>
+                <label class="stage-input-field">Condition</label>
                 <input type="text" name="order" class="code" ng-model="dialogData.code" required>
             </div>
-            <div class="stage-field order-field">
-                <label class="stage-input-field">Order</label>
-                <input type="text" name="order" class="order" ng-model="dialogData.order" required>
-            </div>
-            <div class="stage-field account-field">
-                <label class="stage-input-field">Is Account Opening</label>
-                <input type="text" name="order" class="account" ng-model="dialogData.isAccountOpening" required>
-            </div>
-            <div>
-                <!-- [] is a main stage -->
-            </div>
             <div class="submit-button">
-                <button type="submit" class="btn btn-primary" ng-click="submitStageDetails()">Submit</button>
+                <button type="submit" class="btn btn-primary" ng-click="submitConfigDetails()">Submit</button>
             </div>
             <div ng-show="isDuplicateMessage">
                 <p>{{isDuplicateMessage}}</p>
