--- a/source/templates/dashboardModal.html
+++ b/source/templates/dashboardModal.html
@@ -1,6 +1,6 @@
 <!--Dashboard Addition Modal-->
 <style>
-    input[type=text] {
+    input[type=text]{
         border-left: none !important;
         border-top: none !important;
         border-right: none !important;
@@ -10,56 +10,47 @@
         padding: 6px 12px;
         font-size: 14px;
         line-height: 1.42857143;
-        transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     }
-
-    input:focus {
+    input:focus{
         outline: none;
     }
-
-    .dashboard-choice {
+    .dashboard-choice{
         display: grid;
     }
-
     .dashboard-box-set,
-    .dashboard-title {
+    .dashboard-title{
         display: grid;
         grid-template-columns: 0.1fr 0.4fr;
         grid-column-gap: 2rem;
     }
-
-    .dashboard-options {
+    .dashboard-options{
         display: grid;
         grid-template-columns: 1.5fr 4fr;
         grid-column-gap: 1.5rem;
     }
-
-    .dashboard-field {
+    .dashboard-field{
         margin-bottom: 0px;
         padding-top: 7px;
         margin-bottom: 0;
         text-align: right;
     }
-
-    .select-show-count {
+    .select-show-count{
         display: grid;
         grid-template-columns: 1.5fr 4fr;
         grid-column-gap: 1.5rem;
     }
-
-    .show-count-field {
+    .show-count-field{
         padding-top: 7px;
         margin-bottom: 0;
         text-align: right;
     }
-
-    .show-count-radio {
+    .show-count-radio{
         display: grid;
         grid-template-columns: 0.15fr 0.4fr 0.15fr 2fr;
         padding-top: 0.5rem;
     }
-
-    .submit-button {
+    .submit-button{
         margin-top: 1rem;
         margin-left: 4rem;
     }
@@ -77,18 +68,15 @@
             <div class="select-show-count">
                 <label class="show-count-field">Show Count </label>
                 <div class="show-count-radio">
-                    <input type="radio" id="choiceType1" name="show-count-yes" value="Yes"
-                        ng-model="entityData.showCount">
+                    <input type="radio" id="choiceType1" name="show-count-yes" value="Yes" ng-model="entityData.showCount">
                     <label for="choiceType1">YES</label>
-                    <input type="radio" id="choiceType2" name="show-count-no" value="No"
-                        ng-model="entityData.showCount">
+                    <input type="radio" id="choiceType2" name="show-count-no" value="No" ng-model="entityData.showCount">
                     <label for="choiceType2">NO</label>
                 </div>
             </div>
             <div class="dashboard-options dashboard-box-set">
                 <label class="dashboard-field">Box Set </label>
-                <input type="text" name="dashboardBoxSet" class="dashboard-box-set" ng-model="entityData.boxSet"
-                    required>
+                <input type="text" name="dashboardBoxSet" class="dashboard-box-set" ng-model="entityData.boxSet" required>
             </div>
             <div class="submit-button">
                 <button class="btn btn-primary" ng-click="submitDashboardDetails()">Submit</button>
