--- a/source/templates/entityModal.html
+++ b/source/templates/entityModal.html
@@ -1,7 +1,7 @@
 <!--UI Route Addition Modal-->
 <style>
     input[type=text],
-    select {
+    select{
         border-left: none !important;
         border-top: none !important;
         border-right: none !important;
@@ -11,62 +11,53 @@
         padding: 6px 12px;
         font-size: 14px;
         line-height: 1.42857143;
-        transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     }
-
     input:focus,
-    select:focus {
+    select:focus{
         outline: none;
     }
-
     .entity-queue-choice>input[type=text],
-    .entity-detail-choice>input[type=text] {
+    .entity-detail-choice>input[type=text]{
         cursor: pointer;
     }
-
-    .entity-choice {
+    .entity-choice{
         display: grid;
         grid-template-columns: 0.5fr;
         grid-row-gap: 0.5rem;
         justify-content: center;
     }
-
-    .entity-field {
+    .entity-field{
         display: grid;
         /*grid-row-gap: 1rem;*/
     }
-
     .entity-route-details,
-    .select-entity-type {
+    .select-entity-type{
         display: grid;
         grid-template-columns: 1.5fr 4fr;
         grid-column-gap: 1.5rem;
     }
-
     .entity-input-field,
-    .select-entity-name {
+    .select-entity-name{
         margin-bottom: 0px;
         padding-top: 7px;
         margin-bottom: 0;
         text-align: right;
     }
-
-    .select-page-type {
+    .select-page-type{
         padding-top: 7px;
         margin-bottom: 0;
         text-align: right;
     }
-
-    .submit-button {
+    .submit-button{
         margin-top: 1rem;
         margin-left: 4rem;
     }
-
     /* .select-entity-radio{
-            display: grid;
-            grid-template-columns: 0.15fr 0.4fr 0.15fr 2fr;
-            padding-top: 0.5rem;
-        } */
+        display: grid;
+        grid-template-columns: 0.15fr 0.4fr 0.15fr 2fr;
+        padding-top: 0.5rem;
+    } */
 </style>
 <div class="modal-contents">
     <div class="modal-header">
@@ -85,8 +76,7 @@
             <div class="select-entity-type">
                 <label class="select-page-type">Entity Type </label>
                 <div class="select-entity-name">
-                    <select ng-model="entityData.name" name="entity"
-                        ng-options="entity as entity for entity in entites">
+                    <select ng-model="entityData.name" name="entity" ng-options="entity as entity for entity in entites">
                     </select>
                 </div>
             </div>
@@ -94,24 +84,24 @@
                 <button type="submit" class="btn btn-primary" ng-click="submitEntityDetails()">Submit</button>
             </div>
             <!-- <div class="entity-section" ng-show="entityData.type">
-                    <hr>
-                </div> -->
+                <hr>
+            </div> -->
             <!-- <div class="entity-choice" ng-show="entityData.type == 'Queue'">
-                    <div class="entity-queue-choice">
-                        <input type="text" ng-readonly="true" ng-model="queue[0]" ng-click="closeModal(queue[0])"/>
-                    </div>
-                </div> -->
+                <div class="entity-queue-choice">
+                    <input type="text" ng-readonly="true" ng-model="queue[0]" ng-click="closeModal(queue[0])"/>
+                </div>
+            </div> -->
             <!-- <div class="entity-choice" ng-show="entityData.type == 'Detail'">
-                    <div class="entity-detail-choice">
-                        <input type="text" ng-readonly="true" ng-model="detail[0]" ng-click="closeModal(detail[0])" />
-                    </div>
-                    <div class="entity-detail-choice">
-                        <input type="text" ng-readonly="true" ng-model="detail[1]" ng-click="closeModal(detail[1])"/>
-                    </div>
-                    <div class="entity-detail-choice">
-                        <input type="text" ng-readonly="true" ng-model="detail[2]" ng-click="closeModal(detail[2])" />
-                    </div>
-                </div> -->
+                <div class="entity-detail-choice">
+                    <input type="text" ng-readonly="true" ng-model="detail[0]" ng-click="closeModal(detail[0])" />
+                </div>
+                <div class="entity-detail-choice">
+                    <input type="text" ng-readonly="true" ng-model="detail[1]" ng-click="closeModal(detail[1])"/>
+                </div>
+                <div class="entity-detail-choice">
+                    <input type="text" ng-readonly="true" ng-model="detail[2]" ng-click="closeModal(detail[2])" />
+                </div>
+            </div> -->
         </div>
     </div>
     <div class="modal-footer">
