--- a/source/templates/dashboardModal.html
+++ b/source/templates/dashboardModal.html
@@ -63,6 +63,19 @@
         margin-top: 1rem;
         margin-left: 4rem;
     }
+
+    .select-route {
+        margin-bottom: 0px;
+        padding-top: 7px;
+        margin-bottom: 0;
+        text-align: right;
+    }
+
+    .select-route-name {
+        padding-top: 7px;
+        margin-bottom: 0;
+        text-align: right;
+    }
 </style>
 <div class="modal-contents">
     <div class="modal-header">
@@ -89,6 +102,14 @@
                 <label class="dashboard-field">Box Set </label>
                 <input type="text" name="dashboardBoxSet" class="dashboard-box-set" ng-model="entityData.boxSet"
                     required>
+            </div>
+            <div class="select-route">
+                <label class="select-route-name">Entity Type </label>
+                <div class="select-route-name">
+                    <select ng-model="routes" name="route-name"
+                        ng-options="route as route for route in routes">
+                    </select>
+                </div>
             </div>
             <div class="submit-button">
                 <button class="btn btn-primary" ng-click="submitDashboardDetails()">Submit</button>
