css changes for select type

--- a/source/templates/dashboardModal.html
+++ b/source/templates/dashboardModal.html
@@ -83,6 +83,9 @@
         padding-top: 7px;
         margin-bottom: 0;
         text-align: right;
+        display: grid;
+        grid-template-columns: 1.5fr 4fr;
+        grid-column-gap: 1.5rem;
     }
 
     .select-route-name {
