two way data binding for route name

--- a/source/templates/dashboardModal.html
+++ b/source/templates/dashboardModal.html
@@ -123,7 +123,7 @@
             <div class="select-route">
                 <label class="select-route-name">Entity Type </label>
                 <div class="select-route-name">
-                    <select ng-model="routes" name="route-name"
+                    <select ng-model="entityData.routes" name="route-name"
                         ng-options="route as route for route in routes">
                     </select>
                 </div>
